--- a/appspec.yaml
+++ b/appspec.yaml
@@ -3,7 +3,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "arn:aws:ecs:us-east-1:975050225555:task-definition/ecs-cicd-family:9"
+        TaskDefinition: "arn:aws:ecs:us-east-1:975050225555:task-definition/ecs-cicd-family:latest"
         LoadBalancerInfo:
           ContainerName: "web"
           ContainerPort: 80
