--- a/appspec.yaml
+++ b/appspec.yaml
@@ -1,9 +1,9 @@
-version: 0.0
+version: 1
 Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "ecs-cicd-taskdef2"
+        TaskDefinition: "arn:aws:ecs:us-east-1:975050225555:task-definition/ecs-cicd-taskdef2"
         LoadBalancerInfo:
           ContainerName: "web"
           ContainerPort: 80
